# vasp_auto

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  README_en.md  completion.sh  host.example.toml  pyproject.toml
docs/: analysis-energy.md  analysis-interp.md  config-file-specification-v2-archive.md  config-file-specification-v5-en.md  config-file-specification-v5.md  resource-allocation-logic.md  路径重新插值方法.md
tests/: incar_parser_test.py  test_cp2k_input.py  test_dag.py  test_incar.py  test_interp.py  test_parallel.py
tests/config_files/: config1.toml
vaspauto/: __init__.py  __main__.py  calc_runner.py  cli.py  cp2k_parser.py  host_info.py  incar_parser.py  potcar.py  run.py  submit.py  task_scheduler.py  task_submit.py
vaspauto/analysis/: __init__.py  _interp.py  energy.py  interp.py  neb.py
vaspauto/core/: calc.py  dag.py  host_info.py  task.py  util.py
vaspauto/io/: cp2k_input.py  incar.py  kpoints.py  poscar.py  potcar.py
