[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "vaspauto"
dynamic = ["version"]
description = "Automated VASP / CP2K calculation framework for HPC clusters"
authors = [{name = "YCX"}]
requires-python = ">=3.10"
dependencies = [
    "filelock",
    "tomli; python_version < '3.11'",
]

[project.optional-dependencies]
analysis = ["scipy", "numpy"]
debug = ["tomli_w"]

[project.scripts]
vaspauto = "vaspauto.cli:main"

[tool.setuptools.dynamic]
version = {attr = "vaspauto.__version__"}

[tool.setuptools.packages.find]
where = ["."]
